feat: reworked to ts

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
-    "extends": ["airbnb"],
+    "extends": ["airbnb", "airbnb-typescript/base"],
+    "parserOptions": {
+        "project": "./tsconfig.json"
+    },
     "env": {
         "browser": true,
         "node": true
